# SPMv1.0

./: .coverage  .dockerignore  .env.example  .gitignore  .npmrc  .pre-commit-config.yaml  ACCESO_APLICACION.md  ANALISIS_5_PROCESOS_CRITICOS.md  APLICACION_EN_VIVO.md  ARCHITECTURE.md  AUDIT_CHECKLIST.md  AUDIT_SUMMARY.txt  CAMBIOS_DROPDOWNS.md  CIERRE_SESION_FINAL.txt  CLAUDE.md  CLEANUP_FINAL_REPORT.txt  CLEANUP_SUMMARY.txt  CODE_REVIEW_GUIDE.md  COMMIT_COMPLETADO.txt  COMMIT_SESSION_IMPROVEMENTS.md  CONTRIBUTING.md  CONVERSION_COMPLETADA.md  Contexto.md  DASHBOARD_FINAL_SESION3.md  DEPLOYMENT.md  DISENO_OPTIMIZADO_SESION4.md  DROPDOWN_IMPROVEMENTS.md  Dockerfile  ESTADO_PROYECTO_FASE1.md  FASE_1_RESUMEN_RAPIDO.md  FASE_1_VALIDACIONES_COMPLETADO.md  FASE_2_PLANIFICACION.md  FASE_5_FINAL_SUMMARY.md  FASE_5_RESUMEN_EJECUTIVO.md  FASE_5_SEGURIDAD_COMPLETADA.md  FASE_6_COMPONENTES_ARQUITECTURA.md  FASE_6_PROXIMAS_ACCIONES.md  FASE_6_SPRINT1_COMPLETADO.md  FASE_6_SPRINT2_PLAN.md  FIXES_FASE_1_CRITICOS.md  (+131 more)
backend_v2/: .coverage  .env.example  .gitkeep  FASE4_FEATURE_PARITY.md  README.md  __init__.py  app.py  create_admin.py  pyproject.toml  run_migrations.py  verify_migration.py
backend_v2/core/: __init__.py  config.py  csrf.py  db.py  jwt_manager.py  rate_limiter.py  security.py  security_headers.py
backend_v2/middleware/: __init__.py  auth.py
backend_v2/migrations/: 001_create_users.sql  002_create_solicitudes.sql  003_create_planner_tables.sql
backend_v2/models/: __init__.py  solicitud.py  user.py
backend_v2/routes/: __init__.py  auth.py  health.py  planner.py  solicitudes.py
backend_v2/schemas/: __init__.py  (+3 more)
(+597 files in other folders)
